все сделано, осталось переписать функцию putTask, чтобы она меняла не весь массив задач, а только измененную задачу

--- a/toDoListV3/main.css
+++ b/toDoListV3/main.css
@@ -420,3 +420,7 @@ h1 {
 .todo__task__checkbox__completed button,.todo__task__checkbox__cancelled button {
     display:none;
 }
+
+.hidden {
+    display:none;
+}
